--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-default {
+        @apply
+        text-white
+        border
+        border-black
+        bg-blue-400
+        rounded-sm
+        p-3
+        m-2
+        disabled:bg-gray-400
+        disabled:cursor-not-allowed
+    }
+    .btn-default:hover {
+        @apply bg-blue-700 disabled:bg-gray-400
+    }
+    .btn-default:active {
+        @apply
+        bg-blue-900
+    }
+}
